2002-06-08  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* NEWS: Mention major bug fixes since 1.6.1.

2002-06-08  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (lang_yacc_target_hook): Add rule to recover from
	the removal of $header.
	* lib/am/yacc.am (%BASE%.h): Remove (duplicate with the one
	output by lang_yacc_target_hook).
	* tests/yacc7.test: Try to recreate foo.h after its removal.
	* tests/yacc8.test: Add `AM_YFLAGS = -d' and try to recreate
	parse.h too.
	Reported by Bernd Jendrissek.

2002-06-08  Alexandre Duret-Lutz  <duret_g@epita.fr>

	For PR automake/317:
	* Makefile.am (maintainer-check): Disallow `for f in $(FILES)',
	suggest `list='$(FILES)'; for f in $$list' instead.
	* lib/am/distdir.am (distdir): Adjust `for' usage.
	* lib/am/texinfos.am (maintainer-clean-aminfo): Likewise.
	* tests/dollar.test: New file.
	* tests/Makefile.am (TESTS): Add dollar.test.
	Reported by Eric Siegerman and Philip Fong.

2002-06-06  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/am/configure.am (am__CONFIG_DISTCLEAN_FILES): New variable.
	(distclean): Use it.
	(maintainer-clean): Delete autom4te.cache and
	$(am__CONFIG_DISTCLEAN_FILES).
	* tests/maintclean.test: New file.
	* tests/Makefile.am (TESTS): Add maintclean.test.

2002-06-05  Miloslav Trmac  <trmac@popelka.ms.mff.cuni.cz>

	* lib/am/dejagnu.am (site.exp): Quote build_alias, host_alias, and
	target_alias.

2002-05-31  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* test/cond22.test: Set SHELL when calling $MAKE -e.

2002-05-31  Richard Boulton <richard@tartarus.org>

	Fix PR automake/326:
	* automake.in (define_objects_from_sources): Calculate the result in
	all conditions before passing this to subobjname to pick a name to
	store the result in.
	(subobjname): Expect a list of condition/value pairs as input.
	Combine this list and use it as the key to determine the variable name.
	* test/cond22.test: New file.
	* tests/Makefile.am (TESTS): Add cond22.test
