@@ -1,25 +1,110 @@
 #! /bin/sh
-# Test to make sure nobase_*_HEADERS work.
+# Make sure nobase_* works.
 
+required=libtoolize
 . $srcdir/defs || exit 1
 
+set -e
+
 cat >> configure.in <<'EOF'
+AC_PROG_CC
+AC_PROG_LIBTOOL
 AC_OUTPUT
 EOF
 
 cat > Makefile.am << 'EOF'
 foodir = $(prefix)/foo
-nobase_foo_HEADERS = bar/baz.h
+fooexecdir = $(prefix)/foo
+
+foo_HEADERS = sub/base.h
+nobase_foo_HEADERS = sub/nobase.h
+
+foo_DATA = sub/base.dat
+nobase_foo_DATA = sub/nobase.dat
+
+fooexec_SCRIPTS = sub/base.sh
+nobase_fooexec_SCRIPTS = sub/nobase.sh
+
+fooexec_PROGRAMS = sub/base
+nobase_fooexec_PROGRAMS = sub/nobase
+sub_base_SOURCES = source.c
+sub_nobase_SOURCES = source.c
+
+fooexec_LIBRARIES = sub/libbase.a
+nobase_fooexec_LIBRARIES = sub/libnobase.a
+sub_libbase_a_SOURCES = source.c
+sub_libnobase_a_SOURCES = source.c
+
+fooexec_LTLIBRARIES = sub/libbase.la
+nobase_fooexec_LTLIBRARIES = sub/libnobase.la
+sub_libbase_la_SOURCES = source2.c
+sub_libnobase_la_SOURCES = source2.c
 EOF
 
-mkdir bar
-: > bar/baz.h
+mkdir sub
 
-set -e
+: > sub/base.h
+: > sub/nobase.h
+: > sub/base.dat
+: > sub/nobase.dat
+: > sub/base.sh
+: > sub/nobase.sh
 
+cat >source.c <<'EOF'
+int
+main (int argc, char *argv[])
+{
+  return 0;
+}
+EOF
+cp source.c source2.c
+
+libtoolize
 $ACLOCAL
 $AUTOCONF
 $AUTOMAKE -a
-./configure --prefix `pwd`/install
+./configure --prefix `pwd`/inst
+
+$MAKE
 $MAKE install-data
-test -f install/foo/bar/baz.h
+
+test   -f inst/foo/sub/nobase.h
+test ! -f inst/foo/nobase.h
+test   -f inst/foo/base.h
+
+test   -f inst/foo/sub/nobase.dat
+test ! -f inst/foo/nobase.dat
+test   -f inst/foo/base.dat
+
+test ! -f inst/foo/sub/nobase.sh
+test ! -f inst/foo/base.sh
+test ! -f inst/foo/sub/nobase
+test ! -f inst/foo/base
+test ! -f inst/foo/sub/libnobase.a
+test ! -f inst/foo/libbase.a
+test ! -f inst/foo/sub/libnobase.la
+test ! -f inst/foo/libbase.la
+
+$MAKE install-exec
+
+test   -f inst/foo/sub/nobase.sh
+test ! -f inst/foo/nobase.sh
+test   -f inst/foo/base.sh
+
+test   -f inst/foo/sub/nobase
+test ! -f inst/foo/nobase
+test   -f inst/foo/base
+
+test   -f inst/foo/sub/libnobase.a
+test ! -f inst/foo/libnobase.a
+test   -f inst/foo/libbase.a
+
+test   -f inst/foo/sub/libnobase.la
+test ! -f inst/foo/libnobase.la
+test   -f inst/foo/libbase.la
+
+$MAKE uninstall
+
+test `find inst/foo -type f -print | wc -l` = 0
+
+$MAKE install-strip
