@@ -1,3 +1,15 @@
+2002-06-09  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
+	For PR automake/318:
+	* tests/nobase.test: Rewrite to test _HEADERS, _DATA, _SCRIPTS,
+	_PROGRAMS, _LIBRARIES, and _LTLIBRARIES.
+	* lib/am/scripts.am (install-%DIR%SCRIPTS,
+	uninstall-%DIR%SCRIPTS): Honor nobase_; strip the directory by
+	default.
+	(?%DIR%SCRIPT_INSTALL): New variable.
+	* lib/am/header-vars.am (install_sh_SCRIPT): New variable.
+	Reported by Eric Siegerman.
+
 2002-06-08  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
 	* NEWS: Mention major bug fixes since 1.6.1.
